[package]
name = "snowball-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# run the web server
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"

# deserilize json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async support
futures = { version = "0.3", default-features = false }

# gen uuid
uuid = { version = "1.1.2", features = ["serde", "v4"] }
